// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SPageArtistSingle Snapshot > renders complete artist with upvotes and auth enabled correctly 1`] = `
<div>
  <header class="
    bg-background
    bg-background
    border-b
    border-gray-200
    dark:border-gray-800
    duration-300
    duration-300
    sticky
    sticky
    top-0
    top-0
    transition-all
    transition-all
    z-10
    z-40
  ">
    <div class="
      lg:px-8
      max-w-(--ui-container)
      mx-auto
      px-4
      sm:px-6
      w-full
    ">
      <div class="
        flex
        flex-col
        gap-4
        items-center
        justify-between
        py-3
        sm:flex-row
      ">
        <div class="
          flex
          flex-grow
          gap-3
          items-center
          min-w-0
        ">
          <!-- v-if -->
          <div class="
            flex-grow
            min-w-0
          ">
            <h1 class="
              dark:text-white
              duration-300
              font-bold
              sm:text-2xl
              text-gray-900
              text-xl
              transition-all
              truncate
            ">
              Test Artist
            </h1>
            <div class="
              dark:text-gray-400
              text-gray-500
              text-sm
              truncate
            "></div>
          </div>
        </div>
        <div class="
          flex
          flex-shrink-0
          gap-3
          items-center
          justify-end
          sm:w-auto
          w-full
        ">
          <div
            class="
              -space-x-px
              inline-flex
              relative
            "
            module="music_artists"
          >
            <button
              class="
                aria-disabled:bg-default
                aria-disabled:cursor-not-allowed
                aria-disabled:opacity-75
                bg-default
                disabled:bg-default
                disabled:cursor-not-allowed
                disabled:opacity-75
                focus-visible:ring-2
                focus-visible:ring-inverted
                focus-visible:z-[1]
                focus:outline-none
                font-medium
                gap-1.5
                hover:bg-elevated
                inline-flex
                items-center
                not-last:not-first:rounded-none
                not-only:first:rounded-e-none
                not-only:last:rounded-s-none
                p-1.5
                ring
                ring-accented
                ring-inset
                rounded-md
                text-default
                text-sm
                transition-colors
              "
              type="button"
            >
              <span
                aria-hidden="true"
                class="
                  i-lucide:arrow-big-up
                  iconify
                  shrink-0
                  size-5
                "
              ></span>
              <!-- v-if -->
              <!-- v-if -->
            </button>
            <span class="
              bg-default
              focus-visible:z-[1]
              font-medium
              gap-1
              inline-flex
              items-center
              justify-center
              not-last:not-first:rounded-none
              not-only:first:rounded-e-none
              not-only:last:rounded-s-none
              p-1
              ring
              ring-accented
              ring-inset
              rounded-md
              text-default
              text-sm
              w-8
            ">
              <!-- v-if -->
              <span class="truncate">
                NaN
              </span>
              <!-- v-if -->
            </span>
            <button
              class="
                aria-disabled:bg-default
                aria-disabled:cursor-not-allowed
                aria-disabled:opacity-75
                bg-default
                disabled:bg-default
                disabled:cursor-not-allowed
                disabled:opacity-75
                focus-visible:ring-2
                focus-visible:ring-inverted
                focus-visible:z-[1]
                focus:outline-none
                font-medium
                gap-1.5
                hover:bg-elevated
                inline-flex
                items-center
                not-last:not-first:rounded-none
                not-only:first:rounded-e-none
                not-only:last:rounded-s-none
                p-1.5
                ring
                ring-accented
                ring-inset
                rounded-md
                text-default
                text-sm
                transition-colors
              "
              type="button"
            >
              <span
                aria-hidden="true"
                class="
                  i-lucide:arrow-big-down
                  iconify
                  shrink-0
                  size-5
                "
              ></span>
              <!-- v-if -->
              <!-- v-if -->
            </button>
          </div>
          <a
            class="
              aria-disabled:cursor-not-allowed
              aria-disabled:opacity-75
              disabled:cursor-not-allowed
              disabled:opacity-75
              font-medium
              gap-1.5
              inline-flex
              items-center
              px-2.5
              py-1.5
              rounded-md
              sm:w-auto
              text-xs
              transition-colors
              w-full
            "
            href="https://serp.ly/@daftfm/amazon/music/unlimited"
            rel="noopener noreferrer"
            target="_blank"
          ><span
            aria-hidden="true"
            class="
              i-heroicons:arrow-top-right-on-square
              iconify
              shrink-0
              size-4
            "
          ></span><span class="truncate">Listen Free</span>
            
          <!-- v-if -->
          </a>
        </div>
      </div>
      <nav class="
        -mx-4
        border-gray-200
        border-t
        dark:border-gray-800
        flex
        overflow-x-auto
        px-4
        sm:-mx-6
        sm:px-6
      ">
        <a
          class="
            aria-disabled:cursor-not-allowed
            aria-disabled:opacity-75
            disabled:cursor-not-allowed
            disabled:opacity-75
            flex-shrink-0
            font-medium
            gap-1.5
            inline-flex
            items-center
            px-2.5
            py-1.5
            rounded-none
            text-xs
            transition-colors
            whitespace-nowrap
          "
          href="#overview"
        >
          
        <!-- v-if --><span class="truncate">Overview</span>
          
        <!-- v-if -->
        </a>
        <a
          class="
            aria-disabled:cursor-not-allowed
            aria-disabled:opacity-75
            disabled:cursor-not-allowed
            disabled:opacity-75
            flex-shrink-0
            font-medium
            gap-1.5
            inline-flex
            items-center
            px-2.5
            py-1.5
            rounded-none
            text-xs
            transition-colors
            whitespace-nowrap
          "
          href="#albums"
        >
          
        <!-- v-if --><span class="truncate">Albums</span>
          
        <!-- v-if -->
        </a>
        <a
          class="
            aria-disabled:cursor-not-allowed
            aria-disabled:opacity-75
            disabled:cursor-not-allowed
            disabled:opacity-75
            flex-shrink-0
            font-medium
            gap-1.5
            inline-flex
            items-center
            px-2.5
            py-1.5
            rounded-none
            text-xs
            transition-colors
            whitespace-nowrap
          "
          href="#songs"
        >
          
        <!-- v-if --><span class="truncate">Songs</span>
          
        <!-- v-if -->
        </a>
      </nav>
    </div>
  </header>
  <!-- Main content wrapper -->
  <div class="
    lg:p-8
    max-w-7xl
    md:p-6
    mx-auto
    p-4
  ">
    <!-- Breadcrumbs -->
    <nav
      aria-label="breadcrumb"
      class="
        mb-6
        min-w-0
        relative
      "
    >
      <ol class="
        flex
        gap-1.5
        items-center
      "></ol>
    </nav>
    <!-- Grid Layout -->
    <div class="
      gap-6
      grid
      lg:grid-cols-3
    ">
      <!-- Main Content Column (70%) -->
      <div class="
        lg:col-span-2
        space-y-8
      ">
        <!-- Albums Section - Refactored -->
        <section
          class="scroll-mt-24"
          data-adsense-content="artist-albums"
          id="albums"
        >
          <h2 class="
            font-semibold
            mb-4
            text-2xl
          ">
            Test Artist Albums
          </h2>
          <div class="space-y-6">
            <div class="
              bg-default
              divide-default
              divide-y
              ring
              ring-default
              rounded-lg
            ">
              <div class="
                p-4
                sm:px-6
              ">
                <div class="
                  flex
                  items-center
                  justify-between
                ">
                  <a
                    class="
                      font-medium
                      hover:underline
                      text-lg
                      text-primary
                    "
                    href="/albums/album-1"
                  >Album One</a>
                  <!-- v-if -->
                </div>
              </div>
              <div class="
                p-4
                sm:p-6
              ">
                <div class="
                  flex
                  flex-col
                  gap-4
                  sm:flex-row
                ">
                  <!-- Album Cover -->
                  <!-- v-if -->
                  <!-- Tracklist -->
                  <div class="
                    flex-grow
                    sm:w-3/4
                  ">
                    <h4 class="
                      dark:text-gray-400
                      font-medium
                      mb-2
                      text-gray-500
                      text-sm
                    "></h4>
                    <ol class="
                      list-decimal
                      list-inside
                      space-y-1
                      text-sm
                    ">
                      <li>
                        <a
                          class="
                            dark:text-primary-400
                            hover:underline
                            text-primary-600
                          "
                          href="/songs/song-1"
                        >Song One</a>
                      </li>
                      <li>
                        <span class="
                          dark:text-gray-300
                          text-gray-700
                        ">
                          Song Two
                        </span>
                      </li>
                    </ol>
                  </div>
                </div>
              </div>
              <!-- v-if -->
            </div>
            <!-- v-if -->
          </div>
        </section>
        <!-- Songs section placeholder if needed separately -->
        <section
          class="scroll-mt-24"
          id="songs"
        >
          <!-- Can list individual songs here if desired, separate from albums -->
        </section>
      </div>
      <!-- Sidebar Column (30%) -->
      <div class="
        lg:col-span-1
        space-y-6
      ">
        <!-- Artist Image -->
        <!-- Fallback placeholder -->
        <div class="
          aspect-square
          bg-gray-100
          dark:bg-gray-800
          flex
          items-center
          justify-center
          rounded-md
          shadow-sm
        ">
          <span
            aria-hidden="true"
            class="
              dark:text-gray-600
              h-1/3
              i-heroicons:user
              iconify
              text-gray-400
              w-1/3
            "
          ></span>
        </div>
        <!-- Overview Card (Added to Sidebar) -->
        <div
          class="
            bg-default
            divide-default
            divide-y
            ring
            ring-default
            rounded-lg
          "
          data-adsense-content="artist-overview"
        >
          <div class="
            p-4
            sm:px-6
          ">
            <div class="font-medium">
              Overview
            </div>
          </div>
          <div class="
            p-4
            sm:p-6
          ">
            <div class="
              dark:prose-invert
              max-w-none
              prose
              prose-sm
            ">
              <p>
                Overview content for Test Artist.
              </p>
            </div>
          </div>
          <!-- v-if -->
        </div>
        <!-- General Info Card -->
        <div class="
          bg-default
          divide-default
          divide-y
          ring
          ring-default
          rounded-lg
        ">
          <div class="
            p-4
            sm:px-6
          ">
            <div class="font-medium">
              Artist Info
            </div>
          </div>
          <div class="
            p-4
            sm:p-6
          ">
            <div class="
              space-y-2
              text-sm
            ">
              <div class="
                dark:text-white
                font-semibold
                mb-2
                text-gray-900
                text-lg
              ">
                Test Artist
              </div>
              <!-- v-if -->
              <div>
                <span class="
                  dark:text-gray-300
                  font-medium
                  text-gray-700
                ">
                  Active From:
                </span>
                <span class="
                  dark:text-gray-200
                  text-gray-800
                ">
                  2000
                </span>
              </div>
              <div>
                <span class="
                  dark:text-gray-300
                  font-medium
                  text-gray-700
                ">
                  Active Until:
                </span>
                <span class="
                  dark:text-gray-200
                  text-gray-800
                ">
                  2020
                </span>
              </div>
              <!-- v-if -->
              <div>
                <span class="
                  dark:text-gray-300
                  font-medium
                  text-gray-700
                ">
                  Origin:
                </span>
                <span class="
                  dark:text-gray-200
                  text-gray-800
                ">
                  Test City
                </span>
              </div>
              <!-- v-if -->
            </div>
          </div>
          <!-- v-if -->
        </div>
        <!-- Stats Card -->
        <div class="
          bg-default
          divide-default
          divide-y
          ring
          ring-default
          rounded-lg
        ">
          <div class="
            p-4
            sm:px-6
          ">
            <div class="font-medium">
              Stats
            </div>
          </div>
          <div class="
            p-4
            sm:p-6
          ">
            <div class="
              space-y-2
              text-sm
            ">
              <div>
                <span class="
                  dark:text-gray-300
                  font-medium
                  text-gray-700
                ">
                  Genres:
                </span>
                <span class="
                  dark:text-gray-200
                  text-gray-800
                ">
                  Rock, Pop
                </span>
              </div>
              <div>
                <span class="
                  dark:text-gray-300
                  font-medium
                  text-gray-700
                ">
                  Tags:
                </span>
                <span class="
                  dark:text-gray-200
                  text-gray-800
                ">
                  Live, Studio
                </span>
              </div>
            </div>
          </div>
          <!-- v-if -->
        </div>
        <!-- Links Card -->
        <div class="
          bg-default
          divide-default
          divide-y
          ring
          ring-default
          rounded-lg
        ">
          <div class="
            p-4
            sm:px-6
          ">
            <div class="font-medium">
              Listen On
            </div>
          </div>
          <div class="
            p-4
            sm:p-6
          ">
            <div class="p-1">
              <a
                class="
                  aria-disabled:bg-primary/10
                  aria-disabled:cursor-not-allowed
                  aria-disabled:opacity-75
                  bg-blue-50
                  dark:bg-blue-900/20
                  dark:hover:bg-blue-900/30
                  disabled:bg-primary/10
                  disabled:cursor-not-allowed
                  disabled:opacity-75
                  focus-visible:bg-primary/15
                  focus:outline-none
                  font-medium
                  gap-2
                  hover:bg-blue-100
                  inline-flex
                  items-center
                  justify-center
                  px-3
                  py-2
                  rounded-md
                  text-primary
                  text-sm
                  transition-colors
                  w-full
                "
                href="https://serp.ly/@daftfm/amazon/music/unlimited"
                rel="noopener noreferrer"
              >
                
              <!-- v-if --> Amazon Music
                
              <!-- v-if -->
              </a>
            </div>
          </div>
          <!-- v-if -->
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SPageArtistSingle Snapshot > renders minimal artist without upvotes and auth disabled correctly 1`] = `
<div>
  <header class="
    bg-background
    bg-background
    border-b
    border-gray-200
    dark:border-gray-800
    duration-300
    duration-300
    sticky
    sticky
    top-0
    top-0
    transition-all
    transition-all
    z-10
    z-40
  ">
    <div class="
      lg:px-8
      max-w-(--ui-container)
      mx-auto
      px-4
      sm:px-6
      w-full
    ">
      <div class="
        flex
        flex-col
        gap-4
        items-center
        justify-between
        py-3
        sm:flex-row
      ">
        <div class="
          flex
          flex-grow
          gap-3
          items-center
          min-w-0
        ">
          <!-- v-if -->
          <div class="
            flex-grow
            min-w-0
          ">
            <h1 class="
              dark:text-white
              duration-300
              font-bold
              sm:text-2xl
              text-gray-900
              text-xl
              transition-all
              truncate
            ">
              Minimal Artist
            </h1>
            <div class="
              dark:text-gray-400
              text-gray-500
              text-sm
              truncate
            "></div>
          </div>
        </div>
        <div class="
          flex
          flex-shrink-0
          gap-3
          items-center
          justify-end
          sm:w-auto
          w-full
        ">
          <a
            class="
              aria-disabled:cursor-not-allowed
              aria-disabled:opacity-75
              disabled:cursor-not-allowed
              disabled:opacity-75
              font-medium
              gap-1.5
              inline-flex
              items-center
              px-2.5
              py-1.5
              rounded-md
              sm:w-auto
              text-xs
              transition-colors
              w-full
            "
            href="https://serp.ly/@daftfm/amazon/music/unlimited"
            rel="noopener noreferrer"
            target="_blank"
          ><span
            aria-hidden="true"
            class="
              i-heroicons:arrow-top-right-on-square
              iconify
              shrink-0
              size-4
            "
          ></span><span class="truncate">Listen Free</span>
            
          <!-- v-if -->
          </a>
        </div>
      </div>
      <nav class="
        -mx-4
        border-gray-200
        border-t
        dark:border-gray-800
        flex
        overflow-x-auto
        px-4
        sm:-mx-6
        sm:px-6
      ">
        <a
          class="
            aria-disabled:cursor-not-allowed
            aria-disabled:opacity-75
            disabled:cursor-not-allowed
            disabled:opacity-75
            flex-shrink-0
            font-medium
            gap-1.5
            inline-flex
            items-center
            px-2.5
            py-1.5
            rounded-none
            text-xs
            transition-colors
            whitespace-nowrap
          "
          href="#overview"
        >
          
        <!-- v-if --><span class="truncate">Overview</span>
          
        <!-- v-if -->
        </a>
        <a
          class="
            aria-disabled:cursor-not-allowed
            aria-disabled:opacity-75
            disabled:cursor-not-allowed
            disabled:opacity-75
            flex-shrink-0
            font-medium
            gap-1.5
            inline-flex
            items-center
            px-2.5
            py-1.5
            rounded-none
            text-xs
            transition-colors
            whitespace-nowrap
          "
          href="#albums"
        >
          
        <!-- v-if --><span class="truncate">Albums</span>
          
        <!-- v-if -->
        </a>
        <a
          class="
            aria-disabled:cursor-not-allowed
            aria-disabled:opacity-75
            disabled:cursor-not-allowed
            disabled:opacity-75
            flex-shrink-0
            font-medium
            gap-1.5
            inline-flex
            items-center
            px-2.5
            py-1.5
            rounded-none
            text-xs
            transition-colors
            whitespace-nowrap
          "
          href="#songs"
        >
          
        <!-- v-if --><span class="truncate">Songs</span>
          
        <!-- v-if -->
        </a>
      </nav>
    </div>
  </header>
  <!-- Main content wrapper -->
  <div class="
    lg:p-8
    max-w-7xl
    md:p-6
    mx-auto
    p-4
  ">
    <!-- Breadcrumbs -->
    <nav
      aria-label="breadcrumb"
      class="
        mb-6
        min-w-0
        relative
      "
    >
      <ol class="
        flex
        gap-1.5
        items-center
      "></ol>
    </nav>
    <!-- Grid Layout -->
    <div class="
      gap-6
      grid
      lg:grid-cols-3
    ">
      <!-- Main Content Column (70%) -->
      <div class="
        lg:col-span-2
        space-y-8
      ">
        <!-- Albums Section - Refactored -->
        <section
          class="scroll-mt-24"
          data-adsense-content="artist-albums"
          id="albums"
        >
          <h2 class="
            font-semibold
            mb-4
            text-2xl
          ">
            Minimal Artist Albums
          </h2>
          <div class="space-y-6">
            <p class="
              dark:text-gray-400
              text-gray-500
            ">
              No albums found for this artist.
            </p>
          </div>
        </section>
        <!-- Songs section placeholder if needed separately -->
        <section
          class="scroll-mt-24"
          id="songs"
        >
          <!-- Can list individual songs here if desired, separate from albums -->
        </section>
      </div>
      <!-- Sidebar Column (30%) -->
      <div class="
        lg:col-span-1
        space-y-6
      ">
        <!-- Artist Image -->
        <!-- Fallback placeholder -->
        <div class="
          aspect-square
          bg-gray-100
          dark:bg-gray-800
          flex
          items-center
          justify-center
          rounded-md
          shadow-sm
        ">
          <span
            aria-hidden="true"
            class="
              dark:text-gray-600
              h-1/3
              i-heroicons:user
              iconify
              text-gray-400
              w-1/3
            "
          ></span>
        </div>
        <!-- Overview Card (Added to Sidebar) -->
        <div
          class="
            bg-default
            divide-default
            divide-y
            ring
            ring-default
            rounded-lg
          "
          data-adsense-content="artist-overview"
        >
          <div class="
            p-4
            sm:px-6
          ">
            <div class="font-medium">
              Overview
            </div>
          </div>
          <div class="
            p-4
            sm:p-6
          ">
            <div class="
              dark:prose-invert
              max-w-none
              prose
              prose-sm
            ">
              <p>
                Minimal overview content.
              </p>
            </div>
          </div>
          <!-- v-if -->
        </div>
        <!-- General Info Card -->
        <div class="
          bg-default
          divide-default
          divide-y
          ring
          ring-default
          rounded-lg
        ">
          <div class="
            p-4
            sm:px-6
          ">
            <div class="font-medium">
              Artist Info
            </div>
          </div>
          <div class="
            p-4
            sm:p-6
          ">
            <div class="
              space-y-2
              text-sm
            ">
              <div class="
                dark:text-white
                font-semibold
                mb-2
                text-gray-900
                text-lg
              ">
                Minimal Artist
              </div>
              <!-- v-if -->
              <!-- v-if -->
              <!-- v-if -->
              <!-- v-if -->
              <!-- v-if -->
              <!-- v-if -->
            </div>
          </div>
          <!-- v-if -->
        </div>
        <!-- Stats Card -->
        <!-- v-if -->
        <!-- Links Card -->
        <div class="
          bg-default
          divide-default
          divide-y
          ring
          ring-default
          rounded-lg
        ">
          <div class="
            p-4
            sm:px-6
          ">
            <div class="font-medium">
              Listen On
            </div>
          </div>
          <div class="
            p-4
            sm:p-6
          ">
            <div class="p-1">
              <a
                class="
                  aria-disabled:bg-primary/10
                  aria-disabled:cursor-not-allowed
                  aria-disabled:opacity-75
                  bg-blue-50
                  dark:bg-blue-900/20
                  dark:hover:bg-blue-900/30
                  disabled:bg-primary/10
                  disabled:cursor-not-allowed
                  disabled:opacity-75
                  focus-visible:bg-primary/15
                  focus:outline-none
                  font-medium
                  gap-2
                  hover:bg-blue-100
                  inline-flex
                  items-center
                  justify-center
                  px-3
                  py-2
                  rounded-md
                  text-primary
                  text-sm
                  transition-colors
                  w-full
                "
                href="https://serp.ly/@daftfm/amazon/music/unlimited"
                rel="noopener noreferrer"
              >
                
              <!-- v-if --> Amazon Music
                
              <!-- v-if -->
              </a>
            </div>
          </div>
          <!-- v-if -->
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`sPageArtistSingle Snapshot > renders complete artist with upvotes and auth enabled correctly 1`] = `
<div>
  <header class="
    bg-background
    bg-background
    border-b
    border-gray-200
    dark:border-gray-800
    duration-300
    duration-300
    sticky
    sticky
    top-0
    top-0
    transition-all
    transition-all
    z-10
    z-40
  ">
    <div class="
      lg:px-8
      max-w-(--ui-container)
      mx-auto
      px-4
      sm:px-6
      w-full
    ">
      <div class="
        flex
        flex-col
        gap-4
        items-center
        justify-between
        py-3
        sm:flex-row
      ">
        <div class="
          flex
          flex-grow
          gap-3
          items-center
          min-w-0
        ">
          <!-- v-if -->
          <div class="
            flex-grow
            min-w-0
          ">
            <h1 class="
              dark:text-white
              duration-300
              font-bold
              sm:text-2xl
              text-gray-900
              text-xl
              transition-all
              truncate
            ">
              Test Artist
            </h1>
            <div class="
              dark:text-gray-400
              text-gray-500
              text-sm
              truncate
            "></div>
          </div>
        </div>
        <div class="
          flex
          flex-shrink-0
          gap-3
          items-center
          justify-end
          sm:w-auto
          w-full
        ">
          <div
            class="
              -space-x-px
              inline-flex
              relative
            "
            module="music_artists"
          >
            <button
              class="
                aria-disabled:bg-default
                aria-disabled:cursor-not-allowed
                aria-disabled:opacity-75
                bg-default
                disabled:bg-default
                disabled:cursor-not-allowed
                disabled:opacity-75
                focus-visible:ring-2
                focus-visible:ring-inverted
                focus-visible:z-[1]
                focus:outline-none
                font-medium
                gap-1.5
                hover:bg-elevated
                inline-flex
                items-center
                not-last:not-first:rounded-none
                not-only:first:rounded-e-none
                not-only:last:rounded-s-none
                p-1.5
                ring
                ring-accented
                ring-inset
                rounded-md
                text-default
                text-sm
                transition-colors
              "
              type="button"
            >
              <span
                aria-hidden="true"
                class="
                  i-lucide:arrow-big-up
                  iconify
                  shrink-0
                  size-5
                "
              ></span>
              <!-- v-if -->
              <!-- v-if -->
            </button>
            <span class="
              bg-default
              focus-visible:z-[1]
              font-medium
              gap-1
              inline-flex
              items-center
              justify-center
              not-last:not-first:rounded-none
              not-only:first:rounded-e-none
              not-only:last:rounded-s-none
              p-1
              ring
              ring-accented
              ring-inset
              rounded-md
              text-default
              text-sm
              w-8
            ">
              <!-- v-if -->
              <span class="truncate">
                NaN
              </span>
              <!-- v-if -->
            </span>
            <button
              class="
                aria-disabled:bg-default
                aria-disabled:cursor-not-allowed
                aria-disabled:opacity-75
                bg-default
                disabled:bg-default
                disabled:cursor-not-allowed
                disabled:opacity-75
                focus-visible:ring-2
                focus-visible:ring-inverted
                focus-visible:z-[1]
                focus:outline-none
                font-medium
                gap-1.5
                hover:bg-elevated
                inline-flex
                items-center
                not-last:not-first:rounded-none
                not-only:first:rounded-e-none
                not-only:last:rounded-s-none
                p-1.5
                ring
                ring-accented
                ring-inset
                rounded-md
                text-default
                text-sm
                transition-colors
              "
              type="button"
            >
              <span
                aria-hidden="true"
                class="
                  i-lucide:arrow-big-down
                  iconify
                  shrink-0
                  size-5
                "
              ></span>
              <!-- v-if -->
              <!-- v-if -->
            </button>
          </div>
          <a
            class="
              aria-disabled:cursor-not-allowed
              aria-disabled:opacity-75
              disabled:cursor-not-allowed
              disabled:opacity-75
              font-medium
              gap-1.5
              inline-flex
              items-center
              px-2.5
              py-1.5
              rounded-md
              sm:w-auto
              text-xs
              transition-colors
              w-full
            "
            href="https://serp.ly/@daftfm/amazon/music/unlimited"
            rel="noopener noreferrer"
            target="_blank"
          ><span
            aria-hidden="true"
            class="
              i-heroicons:arrow-top-right-on-square
              iconify
              shrink-0
              size-4
            "
          ></span><span class="truncate">Listen Free</span>
            
          <!-- v-if -->
          </a>
        </div>
      </div>
      <nav class="
        -mx-4
        border-gray-200
        border-t
        dark:border-gray-800
        flex
        overflow-x-auto
        px-4
        sm:-mx-6
        sm:px-6
      ">
        <a
          class="
            aria-disabled:cursor-not-allowed
            aria-disabled:opacity-75
            disabled:cursor-not-allowed
            disabled:opacity-75
            flex-shrink-0
            font-medium
            gap-1.5
            inline-flex
            items-center
            px-2.5
            py-1.5
            rounded-none
            text-xs
            transition-colors
            whitespace-nowrap
          "
          href="#overview"
        >
          
        <!-- v-if --><span class="truncate">Overview</span>
          
        <!-- v-if -->
        </a>
        <a
          class="
            aria-disabled:cursor-not-allowed
            aria-disabled:opacity-75
            disabled:cursor-not-allowed
            disabled:opacity-75
            flex-shrink-0
            font-medium
            gap-1.5
            inline-flex
            items-center
            px-2.5
            py-1.5
            rounded-none
            text-xs
            transition-colors
            whitespace-nowrap
          "
          href="#albums"
        >
          
        <!-- v-if --><span class="truncate">Albums</span>
          
        <!-- v-if -->
        </a>
        <a
          class="
            aria-disabled:cursor-not-allowed
            aria-disabled:opacity-75
            disabled:cursor-not-allowed
            disabled:opacity-75
            flex-shrink-0
            font-medium
            gap-1.5
            inline-flex
            items-center
            px-2.5
            py-1.5
            rounded-none
            text-xs
            transition-colors
            whitespace-nowrap
          "
          href="#songs"
        >
          
        <!-- v-if --><span class="truncate">Songs</span>
          
        <!-- v-if -->
        </a>
      </nav>
    </div>
  </header>
  <!-- Main content wrapper -->
  <div class="
    lg:p-8
    max-w-7xl
    md:p-6
    mx-auto
    p-4
  ">
    <!-- Breadcrumbs -->
    <nav
      aria-label="breadcrumb"
      class="
        mb-6
        min-w-0
        relative
      "
    >
      <ol class="
        flex
        gap-1.5
        items-center
      "></ol>
    </nav>
    <!-- Grid Layout -->
    <div class="
      gap-6
      grid
      lg:grid-cols-3
    ">
      <!-- Main Content Column (70%) -->
      <div class="
        lg:col-span-2
        space-y-8
      ">
        <!-- Albums Section - Refactored -->
        <section
          class="scroll-mt-24"
          data-adsense-content="artist-albums"
          id="albums"
        >
          <h2 class="
            font-semibold
            mb-4
            text-2xl
          ">
            Test Artist Albums
          </h2>
          <div class="space-y-6">
            <div class="
              bg-default
              divide-default
              divide-y
              ring
              ring-default
              rounded-lg
            ">
              <div class="
                p-4
                sm:px-6
              ">
                <div class="
                  flex
                  items-center
                  justify-between
                ">
                  <a
                    class="
                      font-medium
                      hover:underline
                      text-lg
                      text-primary
                    "
                    href="/albums/album-1"
                  >Album One</a>
                  <!-- v-if -->
                </div>
              </div>
              <div class="
                p-4
                sm:p-6
              ">
                <div class="
                  flex
                  flex-col
                  gap-4
                  sm:flex-row
                ">
                  <!-- Album Cover -->
                  <!-- v-if -->
                  <!-- Tracklist -->
                  <div class="
                    flex-grow
                    sm:w-3/4
                  ">
                    <h4 class="
                      dark:text-gray-400
                      font-medium
                      mb-2
                      text-gray-500
                      text-sm
                    "></h4>
                    <ol class="
                      list-decimal
                      list-inside
                      space-y-1
                      text-sm
                    ">
                      <li>
                        <a
                          class="
                            dark:text-primary-400
                            hover:underline
                            text-primary-600
                          "
                          href="/songs/song-1"
                        >Song One</a>
                      </li>
                      <li>
                        <span class="
                          dark:text-gray-300
                          text-gray-700
                        ">
                          Song Two
                        </span>
                      </li>
                    </ol>
                  </div>
                </div>
              </div>
              <!-- v-if -->
            </div>
            <!-- v-if -->
          </div>
        </section>
        <!-- Songs section placeholder if needed separately -->
        <section
          class="scroll-mt-24"
          id="songs"
        >
          <!-- Can list individual songs here if desired, separate from albums -->
        </section>
      </div>
      <!-- Sidebar Column (30%) -->
      <div class="
        lg:col-span-1
        space-y-6
      ">
        <!-- Artist Image -->
        <!-- Fallback placeholder -->
        <div class="
          aspect-square
          bg-gray-100
          dark:bg-gray-800
          flex
          items-center
          justify-center
          rounded-md
          shadow-sm
        ">
          <span
            aria-hidden="true"
            class="
              dark:text-gray-600
              h-1/3
              i-heroicons:user
              iconify
              text-gray-400
              w-1/3
            "
          ></span>
        </div>
        <!-- Overview Card (Added to Sidebar) -->
        <div
          class="
            bg-default
            divide-default
            divide-y
            ring
            ring-default
            rounded-lg
          "
          data-adsense-content="artist-overview"
        >
          <div class="
            p-4
            sm:px-6
          ">
            <div class="font-medium">
              Overview
            </div>
          </div>
          <div class="
            p-4
            sm:p-6
          ">
            <div class="
              dark:prose-invert
              max-w-none
              prose
              prose-sm
            ">
              <p>
                Overview content for Test Artist.
              </p>
            </div>
          </div>
          <!-- v-if -->
        </div>
        <!-- General Info Card -->
        <div class="
          bg-default
          divide-default
          divide-y
          ring
          ring-default
          rounded-lg
        ">
          <div class="
            p-4
            sm:px-6
          ">
            <div class="font-medium">
              Artist Info
            </div>
          </div>
          <div class="
            p-4
            sm:p-6
          ">
            <div class="
              space-y-2
              text-sm
            ">
              <div class="
                dark:text-white
                font-semibold
                mb-2
                text-gray-900
                text-lg
              ">
                Test Artist
              </div>
              <!-- v-if -->
              <div>
                <span class="
                  dark:text-gray-300
                  font-medium
                  text-gray-700
                ">
                  Active From:
                </span>
                <span class="
                  dark:text-gray-200
                  text-gray-800
                ">
                  2000
                </span>
              </div>
              <div>
                <span class="
                  dark:text-gray-300
                  font-medium
                  text-gray-700
                ">
                  Active Until:
                </span>
                <span class="
                  dark:text-gray-200
                  text-gray-800
                ">
                  2020
                </span>
              </div>
              <!-- v-if -->
              <div>
                <span class="
                  dark:text-gray-300
                  font-medium
                  text-gray-700
                ">
                  Origin:
                </span>
                <span class="
                  dark:text-gray-200
                  text-gray-800
                ">
                  Test City
                </span>
              </div>
              <!-- v-if -->
            </div>
          </div>
          <!-- v-if -->
        </div>
        <!-- Stats Card -->
        <div class="
          bg-default
          divide-default
          divide-y
          ring
          ring-default
          rounded-lg
        ">
          <div class="
            p-4
            sm:px-6
          ">
            <div class="font-medium">
              Stats
            </div>
          </div>
          <div class="
            p-4
            sm:p-6
          ">
            <div class="
              space-y-2
              text-sm
            ">
              <div>
                <span class="
                  dark:text-gray-300
                  font-medium
                  text-gray-700
                ">
                  Genres:
                </span>
                <span class="
                  dark:text-gray-200
                  text-gray-800
                ">
                  Rock, Pop
                </span>
              </div>
              <div>
                <span class="
                  dark:text-gray-300
                  font-medium
                  text-gray-700
                ">
                  Tags:
                </span>
                <span class="
                  dark:text-gray-200
                  text-gray-800
                ">
                  Live, Studio
                </span>
              </div>
            </div>
          </div>
          <!-- v-if -->
        </div>
        <!-- Links Card -->
        <div class="
          bg-default
          divide-default
          divide-y
          ring
          ring-default
          rounded-lg
        ">
          <div class="
            p-4
            sm:px-6
          ">
            <div class="font-medium">
              Listen On
            </div>
          </div>
          <div class="
            p-4
            sm:p-6
          ">
            <div class="p-1">
              <a
                class="
                  aria-disabled:bg-primary/10
                  aria-disabled:cursor-not-allowed
                  aria-disabled:opacity-75
                  bg-blue-50
                  dark:bg-blue-900/20
                  dark:hover:bg-blue-900/30
                  disabled:bg-primary/10
                  disabled:cursor-not-allowed
                  disabled:opacity-75
                  focus-visible:bg-primary/15
                  focus:outline-none
                  font-medium
                  gap-2
                  hover:bg-blue-100
                  inline-flex
                  items-center
                  justify-center
                  px-3
                  py-2
                  rounded-md
                  text-primary
                  text-sm
                  transition-colors
                  w-full
                "
                href="https://serp.ly/@daftfm/amazon/music/unlimited"
                rel="noopener noreferrer"
              >
                
              <!-- v-if --> Amazon Music
                
              <!-- v-if -->
              </a>
            </div>
          </div>
          <!-- v-if -->
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`sPageArtistSingle Snapshot > renders minimal artist without upvotes and auth disabled correctly 1`] = `
<div>
  <header class="
    bg-background
    bg-background
    border-b
    border-gray-200
    dark:border-gray-800
    duration-300
    duration-300
    sticky
    sticky
    top-0
    top-0
    transition-all
    transition-all
    z-10
    z-40
  ">
    <div class="
      lg:px-8
      max-w-(--ui-container)
      mx-auto
      px-4
      sm:px-6
      w-full
    ">
      <div class="
        flex
        flex-col
        gap-4
        items-center
        justify-between
        py-3
        sm:flex-row
      ">
        <div class="
          flex
          flex-grow
          gap-3
          items-center
          min-w-0
        ">
          <!-- v-if -->
          <div class="
            flex-grow
            min-w-0
          ">
            <h1 class="
              dark:text-white
              duration-300
              font-bold
              sm:text-2xl
              text-gray-900
              text-xl
              transition-all
              truncate
            ">
              Minimal Artist
            </h1>
            <div class="
              dark:text-gray-400
              text-gray-500
              text-sm
              truncate
            "></div>
          </div>
        </div>
        <div class="
          flex
          flex-shrink-0
          gap-3
          items-center
          justify-end
          sm:w-auto
          w-full
        ">
          <a
            class="
              aria-disabled:cursor-not-allowed
              aria-disabled:opacity-75
              disabled:cursor-not-allowed
              disabled:opacity-75
              font-medium
              gap-1.5
              inline-flex
              items-center
              px-2.5
              py-1.5
              rounded-md
              sm:w-auto
              text-xs
              transition-colors
              w-full
            "
            href="https://serp.ly/@daftfm/amazon/music/unlimited"
            rel="noopener noreferrer"
            target="_blank"
          ><span
            aria-hidden="true"
            class="
              i-heroicons:arrow-top-right-on-square
              iconify
              shrink-0
              size-4
            "
          ></span><span class="truncate">Listen Free</span>
            
          <!-- v-if -->
          </a>
        </div>
      </div>
      <nav class="
        -mx-4
        border-gray-200
        border-t
        dark:border-gray-800
        flex
        overflow-x-auto
        px-4
        sm:-mx-6
        sm:px-6
      ">
        <a
          class="
            aria-disabled:cursor-not-allowed
            aria-disabled:opacity-75
            disabled:cursor-not-allowed
            disabled:opacity-75
            flex-shrink-0
            font-medium
            gap-1.5
            inline-flex
            items-center
            px-2.5
            py-1.5
            rounded-none
            text-xs
            transition-colors
            whitespace-nowrap
          "
          href="#overview"
        >
          
        <!-- v-if --><span class="truncate">Overview</span>
          
        <!-- v-if -->
        </a>
        <a
          class="
            aria-disabled:cursor-not-allowed
            aria-disabled:opacity-75
            disabled:cursor-not-allowed
            disabled:opacity-75
            flex-shrink-0
            font-medium
            gap-1.5
            inline-flex
            items-center
            px-2.5
            py-1.5
            rounded-none
            text-xs
            transition-colors
            whitespace-nowrap
          "
          href="#albums"
        >
          
        <!-- v-if --><span class="truncate">Albums</span>
          
        <!-- v-if -->
        </a>
        <a
          class="
            aria-disabled:cursor-not-allowed
            aria-disabled:opacity-75
            disabled:cursor-not-allowed
            disabled:opacity-75
            flex-shrink-0
            font-medium
            gap-1.5
            inline-flex
            items-center
            px-2.5
            py-1.5
            rounded-none
            text-xs
            transition-colors
            whitespace-nowrap
          "
          href="#songs"
        >
          
        <!-- v-if --><span class="truncate">Songs</span>
          
        <!-- v-if -->
        </a>
      </nav>
    </div>
  </header>
  <!-- Main content wrapper -->
  <div class="
    lg:p-8
    max-w-7xl
    md:p-6
    mx-auto
    p-4
  ">
    <!-- Breadcrumbs -->
    <nav
      aria-label="breadcrumb"
      class="
        mb-6
        min-w-0
        relative
      "
    >
      <ol class="
        flex
        gap-1.5
        items-center
      "></ol>
    </nav>
    <!-- Grid Layout -->
    <div class="
      gap-6
      grid
      lg:grid-cols-3
    ">
      <!-- Main Content Column (70%) -->
      <div class="
        lg:col-span-2
        space-y-8
      ">
        <!-- Albums Section - Refactored -->
        <section
          class="scroll-mt-24"
          data-adsense-content="artist-albums"
          id="albums"
        >
          <h2 class="
            font-semibold
            mb-4
            text-2xl
          ">
            Minimal Artist Albums
          </h2>
          <div class="space-y-6">
            <p class="
              dark:text-gray-400
              text-gray-500
            ">
              No albums found for this artist.
            </p>
          </div>
        </section>
        <!-- Songs section placeholder if needed separately -->
        <section
          class="scroll-mt-24"
          id="songs"
        >
          <!-- Can list individual songs here if desired, separate from albums -->
        </section>
      </div>
      <!-- Sidebar Column (30%) -->
      <div class="
        lg:col-span-1
        space-y-6
      ">
        <!-- Artist Image -->
        <!-- Fallback placeholder -->
        <div class="
          aspect-square
          bg-gray-100
          dark:bg-gray-800
          flex
          items-center
          justify-center
          rounded-md
          shadow-sm
        ">
          <span
            aria-hidden="true"
            class="
              dark:text-gray-600
              h-1/3
              i-heroicons:user
              iconify
              text-gray-400
              w-1/3
            "
          ></span>
        </div>
        <!-- Overview Card (Added to Sidebar) -->
        <div
          class="
            bg-default
            divide-default
            divide-y
            ring
            ring-default
            rounded-lg
          "
          data-adsense-content="artist-overview"
        >
          <div class="
            p-4
            sm:px-6
          ">
            <div class="font-medium">
              Overview
            </div>
          </div>
          <div class="
            p-4
            sm:p-6
          ">
            <div class="
              dark:prose-invert
              max-w-none
              prose
              prose-sm
            ">
              <p>
                Minimal overview content.
              </p>
            </div>
          </div>
          <!-- v-if -->
        </div>
        <!-- General Info Card -->
        <div class="
          bg-default
          divide-default
          divide-y
          ring
          ring-default
          rounded-lg
        ">
          <div class="
            p-4
            sm:px-6
          ">
            <div class="font-medium">
              Artist Info
            </div>
          </div>
          <div class="
            p-4
            sm:p-6
          ">
            <div class="
              space-y-2
              text-sm
            ">
              <div class="
                dark:text-white
                font-semibold
                mb-2
                text-gray-900
                text-lg
              ">
                Minimal Artist
              </div>
              <!-- v-if -->
              <!-- v-if -->
              <!-- v-if -->
              <!-- v-if -->
              <!-- v-if -->
              <!-- v-if -->
            </div>
          </div>
          <!-- v-if -->
        </div>
        <!-- Stats Card -->
        <!-- v-if -->
        <!-- Links Card -->
        <div class="
          bg-default
          divide-default
          divide-y
          ring
          ring-default
          rounded-lg
        ">
          <div class="
            p-4
            sm:px-6
          ">
            <div class="font-medium">
              Listen On
            </div>
          </div>
          <div class="
            p-4
            sm:p-6
          ">
            <div class="p-1">
              <a
                class="
                  aria-disabled:bg-primary/10
                  aria-disabled:cursor-not-allowed
                  aria-disabled:opacity-75
                  bg-blue-50
                  dark:bg-blue-900/20
                  dark:hover:bg-blue-900/30
                  disabled:bg-primary/10
                  disabled:cursor-not-allowed
                  disabled:opacity-75
                  focus-visible:bg-primary/15
                  focus:outline-none
                  font-medium
                  gap-2
                  hover:bg-blue-100
                  inline-flex
                  items-center
                  justify-center
                  px-3
                  py-2
                  rounded-md
                  text-primary
                  text-sm
                  transition-colors
                  w-full
                "
                href="https://serp.ly/@daftfm/amazon/music/unlimited"
                rel="noopener noreferrer"
              >
                
              <!-- v-if --> Amazon Music
                
              <!-- v-if -->
              </a>
            </div>
          </div>
          <!-- v-if -->
        </div>
      </div>
    </div>
  </div>
</div>
`;
